crates/keron-lang/tests/corpus/errors/check/symlink_missing_arg.keron
from "std:fs" use symlink, Symlink

val s: Symlink = symlink(from = "a")
